# project-pilot

./: Cargo.toml  LICENSE.md  README.md
src/: cli.rs  config.rs  daemon.rs  event.rs  main.rs  plugin.rs
src/daemon/: event_commands.rs  global_commands.rs  mod.rs  plugin_commands.rs  project_commands.rs
src/plugin/: hyprland.rs  mod.rs  tmux.rs
