[package]
name = "project-pilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.5"
structopt = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-stream = "0.1.15"
tokio-serde-json = "0.3.0"
tokio-serde = { version = "0.9.0", features = ["json"] }
